fixed height issue on mobile view in footerpage

--- a/src/components/FooterPage/footerpage.css
+++ b/src/components/FooterPage/footerpage.css
@@ -3,7 +3,7 @@
     url('../../images/nickel-diner.jpg');
   background-size: cover;
   background-position: right bottom;
-  height: calc(100vh - 131px);
+  /* height: calc(100vh - 131px); */
 }
 
 .footer-page-body h1 {
